# LoanPayBack_Project

./: Dockerfile  README.md  predict.py  pyproject.toml  requirements.txt  test.py  train.ipynb  train.py
.ipynb_checkpoints/: LoanPayback-checkpoint.ipynb  LoanPayback_MidTerm-checkpoint.ipynb  LoanPayback_MidTerm_with_EDA-checkpoint.ipynb  LoanPayback_MidTerm_with_EDA_2splits-checkpoint.ipynb  LoanPayback_MidTerm_with_plots-checkpoint.ipynb  predict-checkpoint.py  train-checkpoint.py  untitled-checkpoint.py
